# CTF

./: .gitignore  Dockerfile  Makefile  dev-entrypoint.sh  pyproject.toml  run_dev_entrypoint.py
.github/workflows/: ci.yml
CTFd/: __init__.py  auth.py  challenges.py  config.ini  config.py
CTFd/admin/: __init__.py
CTFd/api/v1/: challenges.py
CTFd/forms/: auth.py
CTFd/models/: __init__.py
CTFd/themes/admin/: package.json  vite.config.js
CTFd/themes/core-beta/: package-lock.json  package.json  vite.config.js
CTFd/themes/core-beta/assets/js/: challenges.js
CTFd/themes/core-beta/assets/scss/: main.scss
CTFd/themes/core-beta/static/: manifest.json
CTFd/themes/core-beta/static/assets/: challenges.1801320a.js  challenges.c77b2807.js  main.234c628b.css
CTFd/themes/core-beta/templates/: base.html  challenge.html  challenges.html  phone_number_update.html
CTFd/themes/core-beta/templates/components/: terminal.html
CTFd/themes/ctfd-js/: fetch.js  package.json
CTFd/themes/ctfd-js/pages/: challenge.js
CTFd/utils/aws/: auth_helpers.py  challenges.py  constants.py  user.py
CTFd/utils/challenges/: __init__.py
CTFd/utils/decorators/: __init__.py
CTFd/utils/initialization/: __init__.py
CTFd/utils/logging/: __init__.py
CTFd/utils/security/: auth.py
CTFd/utils/updates/: __init__.py
CTFd/utils/user/: __init__.py  user_manager.py
CTFd/utils/validators/: __init__.py
migrations/versions/: 7096a073f6b3_add_cognito_id_column_to_users_table.py
