[tool.poetry]
name = "ctfd"
version = "0.1.0"
description = ""
authors = ["Webiks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
logger = {path = "../../shared/logger", develop = true}
alembic = "1.4.3"
aniso8601 = "8.0.0"
attrs = "20.3.0"
babel = "2.12.1"
banal = "1.0.6"
bcrypt = "4.0.1"
boto3 = "1.35.27"
botocore = "1.35.27"
cachelib = "0.9.0"
certifi = "2022.12.7"
cffi = "1.17.1"
charset-normalizer = "2.0.12"
click = "7.1.2"
cmarkgfm = "2024.1.14"
cryptography = "40.0.2"
dataset = "1.6.2"
flask = "2.0.3"
flask-babel = "2.0.0"
flask-caching = "2.0.2"
flask-marshmallow = "0.10.1"
flask-migrate = "2.5.3"
flask-restx = "1.1.0"
flask-script = "2.0.6"
flask-sqlalchemy = "2.5.1"
freezegun = "1.2.2"
gevent = "23.9.1"
greenlet = "3.0.3"
gunicorn = "20.1.0"
idna = "2.10"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jmespath = "0.10.0"
jsonschema = "3.2.0"
mako = "1.1.3"
markupsafe = "2.1.3"
marshmallow = "2.20.2"
marshmallow-sqlalchemy = "0.17.0"
maxminddb = "1.5.4"
passlib = "1.7.4"
pillow = "10.1.0"
pybluemonday = "0.0.14"
pycparser = "2.20"
pydantic = "1.6.2"
pymysql = {version = "1.0.2", extras = ["rsa"]}
pyrsistent = "0.17.3"
python-dateutil = "2.8.1"
python-dotenv = "0.13.0"
python-editor = "1.0.4"
python-geoacumen-city = "2023.4.15"
pytz = "2020.4"
redis = "4.5.5"
requests = "2.32.3"
s3transfer = "0.10.0"
six = "1.16.0"
sqlalchemy = "1.4.48"
sqlalchemy-utils = "0.41.1"
tenacity = "6.2.0"
urllib3 = "1.26.20"
werkzeug = "2.0.3"
wtforms = "2.3.1"
zope-event = "4.5.0"
zope-interface = "5.2.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
